docs/examples/echoservice/echoserver-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echoserver
  namespace: echoserver
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-09c70f0a4f26d425e, subnet-06bee6f187f378b39, subnet-0a1c6eeb1c5eb717a
spec:
  rules:
    - host: echoserver.eks.tactill.com
      http:
        paths:
          - path: /
            backend:
              serviceName: echoserver
              servicePort: 80
